# opengl

./: .gitignore  CMakeLists.txt  Camera.h  Mesh.h  Model.h  Shader.h  main.cpp  shader.frag  xmake.lua
dependencies/: CMakeLists.txt
dependencies/assimp-4.1.0/: .ninja_deps  .ninja_log  CMakeCache.txt  DartConfiguration.tcl  build.ninja  cmake_install.cmake  cmake_uninstall.cmake  revision.h  rules.ninja
dependencies/assimp-4.1.0/code/: cmake_install.cmake
dependencies/assimp-4.1.0/contrib/: cmake_install.cmake
dependencies/assimp-4.1.0/contrib/irrXML/: cmake_install.cmake
dependencies/assimp-4.1.0/test/: CTestTestfile.cmake  cmake_install.cmake
dependencies/assimp-4.1.0/test/headercheck/: CTestTestfile.cmake  cmake_install.cmake
dependencies/assimp-4.1.0/tools/assimp_cmd/: cmake_install.cmake
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glew-2.0.0/: glew.pc
include/: Camera.h  Mesh.h  Model.h  Shader.h
resources/shaders/: basic.frag  basic.vert  light.frag  model_loading.vert  model_loading_es.frag  model_loading_es.vert  shader.frag  shader.vert
src/: Camera.h  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  TestOpenGLWindow.cpp  TestOpenGLWindow.h  main.cpp
